fixed z-index on navigation

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -109,6 +109,7 @@ nav {
   width: 100%;
   height: 100%;
   padding: 1rem;
+  z-index: 8;
   a {
     color: #93bcf9;
     font-size: 1.618rem;
